--- a/tex/gradu.tex
+++ b/tex/gradu.tex
@@ -837,8 +837,25 @@ The longest evolutionary phase for a black hole binary is when the radius of the
 Current observational evidence suggests that long-lived supermassive black hole binaries might be quite rare. Though there are many implied candidates based on periodic variability, no concrete observations of a supermassive black hole binary have been made. If both of the supermassive black holes of a binary are quasars and they are very close to each other, it is difficult to tell them apart from a singular active galactic nuclei \citep{roedig:2014}. In the future observations made by the LIGO and LISA gravitational wave detectors might give concrete proof of the merging and thus existence of supermassive black hole binaries, and we might be able to even make interferometric direct observations of a binary black hole.
 
 \chapter{AR-CHAIN} \label{chap:ar-chain}
+%TODO kerronko introssa siitä et miks simulaatiota tehään, modaa sen perusteella mitä tässä sanotaan, kuinka paljon taustaa. 
 
-(TODO: yleistä selitystä ar-chainistä ja miten yhdistyy gadgettiin, mainitse ar-chainin osaset: aikamuunnos, chain, BS algoritmi, selitä enemmän teoriaa ja kaavoja jutuille joita koodiosiossa selitetään, lähteet näihin, ainakin Mikkolan papereita, BS paperi, numerical methods, kuva ketjutetusta systeemistä?)
+One widely used software for galaxy scale simulations is the smoothed particle hydrodynamics simulation code GADGET-3 \citep{springel:2005}. \cite{rantala:2017} developed an extension for GADGET-3 called KETJU, which implements algorithmically regularized regions around supermassive black holes to allow for solving the detailed dynamics of these systems. 
+
+(TODO: yleistä selitystä ar-chainistä ja miten yhdistyy gadgettiin, mainitse ar-chainin osaset: aikamuunnos, chain, BS algoritmi, selitä enemmän teoriaa ja kaavoja jutuille joita koodiosiossa selitetään, lähteet näihin, ainakin Mikkolan papereita, BS paperi, numerical methods)
+
+Kuva ketjustetusta systeemistä
+Kuva leapfrogista
+Mukaileva kuva antin BS esimerkistä?
+
+Koodi flowchartti jotenki
+
+-selitä ar-chain idea. 
+
+\section{Algorithmic regularization}
+
+\section{Chain coordinate system}
+
+\section{Gragg–Bulirsch–Stoer algorithm}
 
 \section{AR-CHAIN code overview}
 
