--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -76,6 +76,96 @@ publisher = {Cambridge University Press},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{mikkola:2008,
+   author = {{Mikkola}, S. and {Merritt}, D.},
+    title = "{Implementing Few-Body Algorithmic Regularization with Post-Newtonian Terms}",
+  journal = {AJ},
+archivePrefix = "arXiv",
+   eprint = {0709.3367},
+ keywords = {black hole physics, celestial mechanics, Galaxy: center, methods: N-body simulations, relativity, stellar dynamics},
+     year = 2008,
+    month = jun,
+   volume = 135,
+    pages = {2398-2405},
+      doi = {10.1088/0004-6256/135/6/2398},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2008AJ....135.2398M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{mikkola:2006,
+   author = {{Mikkola}, S. and {Merritt}, D.},
+    title = "{Algorithmic regularization with velocity-dependent forces}",
+  journal = {MNRAS},
+   eprint = {astro-ph/0605054},
+ keywords = {stellar dynamics: methods: N-body simulations: celestial mechanics, stellar dynamics, methods: N-body simulations, celestial mechanics},
+     year = 2006,
+    month = oct,
+   volume = 372,
+    pages = {219-223},
+      doi = {10.1111/j.1365-2966.2006.10854.x},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2006MNRAS.372..219M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{mikkola:2002,
+   author = {{Mikkola}, S. and {Aarseth}, S.},
+    title = "{A Time-Transformed Leapfrog Scheme}",
+  journal = {Celestial Mechanics and Dynamical Astronomy},
+ keywords = {time transformations, second-order differential equations, composite integration, N-body problem},
+     year = 2002,
+    month = dec,
+   volume = 84,
+    pages = {343-354},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2002CeMDA..84..343M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{mikkola:1999,
+   author = {{Mikkola}, S. and {Tanikawa}, K.},
+    title = "{Explicit Symplectic Algorithms For Time-Transformed Hamiltonians}",
+  journal = {Celestial Mechanics and Dynamical Astronomy},
+ keywords = {symplectic integration, time-transformation},
+     year = 1999,
+    month = aug,
+   volume = 74,
+    pages = {287-295},
+      doi = {10.1023/A:1008368322547},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/1999CeMDA..74..287M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{rantala:2017,
+       author = {{Rantala}, Antti and {Pihajoki}, Pauli and {Johansson}, Peter H. and
+         {Naab}, Thorsten and {Lah{\'e}n}, Natalia and {Sawala}, Till},
+        title = "{Post-Newtonian Dynamical Modeling of Supermassive Black Holes in Galactic-scale Simulations}",
+      journal = {ApJ},
+     keywords = {black hole physics, galaxies: evolution, galaxies: nuclei, methods: numerical, stars: kinematics and dynamics, Astrophysics - Astrophysics of Galaxies},
+         year = "2017",
+        month = "May",
+       volume = {840},
+          doi = {10.3847/1538-4357/aa6d65},
+archivePrefix = {arXiv},
+       eprint = {1611.07028},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2017ApJ...840...53R},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{springel:2005,
+   author = {{Springel}, V.},
+    title = "{The cosmological simulation code GADGET-2}",
+  journal = {MNRAS},
+   eprint = {astro-ph/0505010},
+ keywords = {methods: numerical, galaxies: interactions, dark matter},
+     year = 2005,
+    month = dec,
+   volume = 364,
+    pages = {1105-1134},
+      doi = {10.1111/j.1365-2966.2005.09655.x},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/2005MNRAS.364.1105S},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{gultekin:2009,
        author = {{G{\"u}ltekin}, K. and {Richstone}, D.~O. and {Gebhardt}, K. and
          {Lauer}, T.~R. and {Tremaine}, S. and {Aller}, M.~C. and
