--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -76,6 +76,35 @@ publisher = {Cambridge University Press},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{preto:1999,
+   author = {{Preto}, M. and {Tremaine}, S.},
+    title = "{A Class of Symplectic Integrators with Adaptive Time Step for Separable Hamiltonian Systems}",
+  journal = {AJ},
+   eprint = {astro-ph/9906322},
+ keywords = {CELESTIAL MECHANICS, STELLAR DYNAMICS, METHODS: NUMERICAL, SOLAR SYSTEM: GENERAL},
+     year = 1999,
+    month = nov,
+   volume = 118,
+    pages = {2532-2541},
+      doi = {10.1086/301102},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/1999AJ....118.2532P},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{mikkola:1993,
+   author = {{Mikkola}, S. and {Aarseth}, S.~J.},
+    title = "{An implementation of N-body chain regularization}",
+  journal = {Celestial Mechanics and Dynamical Astronomy},
+ keywords = {Celestial Mechanics, Computerized Simulation, Many Body Problem, Orbit Calculation, Particle Motion, Algorithms, Coordinate Transformations, Equations Of Motion, Perturbation, Vectors (Mathematics)},
+     year = 1993,
+    month = nov,
+   volume = 57,
+    pages = {439-459},
+      doi = {10.1007/BF00695714},
+   adsurl = {https://ui.adsabs.harvard.edu/abs/1993CeMDA..57..439M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 @ARTICLE{mikkola:2008,
    author = {{Mikkola}, S. and {Merritt}, D.},
     title = "{Implementing Few-Body Algorithmic Regularization with Post-Newtonian Terms}",
