--- a/tex/lahteet.bib
+++ b/tex/lahteet.bib
@@ -92,7 +92,7 @@ publisher = {Cambridge University Press},
 }
 
 @ARTICLE{mikkola:1993,
-   author = {{Mikkola}, S. and {Aarseth}, S.~J.},
+   author = {{Mikkola}, S. and {Aarseth}, S.},
     title = "{An implementation of N-body chain regularization}",
   journal = {Celestial Mechanics and Dynamical Astronomy},
  keywords = {Celestial Mechanics, Computerized Simulation, Many Body Problem, Orbit Calculation, Particle Motion, Algorithms, Coordinate Transformations, Equations Of Motion, Perturbation, Vectors (Mathematics)},
@@ -105,7 +105,7 @@ publisher = {Cambridge University Press},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{mikkola:2008,
+@ARTICLE{mikkola:2008b,
    author = {{Mikkola}, S. and {Merritt}, D.},
     title = "{Implementing Few-Body Algorithmic Regularization with Post-Newtonian Terms}",
   journal = {AJ},
@@ -466,7 +466,7 @@ publisher = "Institut Mittag-Leffler",
      year = "1920",
 }
 
-@INPROCEEDINGS{mikkola:2008,
+@INPROCEEDINGS{mikkola:2008a,
    author = {{Mikkola}, S.},
     title = "{A Brief History of Regularisation}",
  keywords = {stellar dynamics, methods: n-body simulations, methods: numerical},
